force-app/main/default/objects/Facility__c/Facility__c.object-meta.xml
<CustomObject>
    <label>Room</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>