force-app/main/default/objects/Facility__c/fields/I_RS_Building__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Building__c</fullName>
    <description>Renamed as per T2-338 story.</description>
    <label>Room Building</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>