force-app/main/default/objects/Facility__c/fields/I_RS_Certification_Expiry__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Certification_Expiry__c</fullName>
    <label>OGTR Expiry Date</label>
    <type>Date</type>
</CustomField>