force-app/main/default/objects/Facility__c/fields/I_RS_Date_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_of_Approval__c</fullName>
    <label>OGTR Date of Approval</label>
    <type>Date</type>
</CustomField>