force-app/main/default/objects/Facility__c/fields/I_RS_Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Facility_Type__c</fullName>
    <label>OGTR Facility Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PC1 Facility (Animal/Laboratory/Plant)</fullName>
            </value>
            <value>
                <fullName>PC1 Large Grazing Animal Facility</fullName>
            </value>
            <value>
                <fullName>PC1 Large Scale Facility</fullName>
            </value>
            <value>
                <fullName>PC2 Animal Facility</fullName>
            </value>
            <value>
                <fullName>PC2 Aquatic Facility</fullName>
            </value>
            <value>
                <fullName>PC2 Constant Temperature Room</fullName>
            </value>
            <value>
                <fullName>PC2 Invertebrate Facility</fullName>
            </value>
            <value>
                <fullName>PC2 Laboratory</fullName>
            </value>
            <value>
                <fullName>PC2 Large Scale Facility</fullName>
            </value>
            <value>
                <fullName>PC2 Plant Facility</fullName>
            </value>
            <value>
                <fullName>PC3 Animal Facility</fullName>
            </value>
            <value>
                <fullName>PC3 Invertebrate Facility</fullName>
            </value>
            <value>
                <fullName>PC3 Laboratory</fullName>
            </value>
            <value>
                <fullName>PC3 Plant Facility</fullName>
            </value>
            <value>
                <fullName>PC4 Facility</fullName>
            </value>
            <value>
                <fullName>DNIR</fullName>
            </value>
            <value>
                <fullName>DIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>