force-app/main/default/objects/Facility__c/fields/I_RS_Licence__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Licence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licence</label>
    <referenceTo>Licence_Master__c</referenceTo>
    <relationshipLabel>Linked Rooms</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>