force-app/main/default/objects/Facility__c/fields/I_RS_Licence_Activity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Licence_Activity__c</fullName>
    <label>Room Activity</label>
    <type>TextArea</type>
</CustomField>