force-app/main/default/objects/Facility__c/fields/I_RS_Licence_Facility__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Licence_Facility__c</fullName>
    <label>Licence Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>