force-app/main/default/objects/Facility__c/fields/I_RS_Licence_Level__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Licence_Level__c</fullName>
    <description>Renamed as per T2-338 story.</description>
    <label>Room Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>