force-app/main/default/objects/Facility__c/fields/I_RS_OGTR_Certification_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_OGTR_Certification_Number__c</fullName>
    <label>OGTR Certification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>