force-app/main/default/objects/Facility__c/fields/I_RS_OGTR_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_OGTR_Title__c</fullName>
    <label>OGTR Facility Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>