force-app/main/default/objects/Facility__c/fields/I_RS_Responsible_Department__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Responsible_Department__c</fullName>
    <label>Responsible Department</label>
    <type>TextArea</type>
</CustomField>