force-app/main/default/objects/Facility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Status__c</columns>
    <columns>I_RS_OGTR_Certification_Number__c</columns>
    <columns>I_RS_Facility_Type__c</columns>
    <columns>I_RS_Responsible_Department__c</columns>
    <columns>I_RS_OGTR_Title__c</columns>
    <columns>I_RS_Rooms__c</columns>
    <columns>I_RS_Building__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>